# APIException

./: .gitattributes  404.html  LICENCE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  setup.py  sitemap.xml
.github/workflows/: pages.yml
advanced/logging/: index.html
advanced/swagger/: index.html
api_exception/: __init__.py  __main__.py  exception.py  logger.py  response_model.py  response_utils.py
assets/: styles.css
benchmark/: benchmark.py  control_report.html  docker-compose.yml  locustfile.py  report.html  requirements.txt  test_report.html
benchmark/control_app/: Dockerfile  main.py
benchmark/test_app/: Dockerfile  main.py
changelog/: index.html
custom_enum/: enums.py
docs/: changelog.md  examples.md  index.md  installation.md
docs/advanced/: logging.md  rfc7807.md  swagger.md
docs/overrides/stylesheets/: extra.css
docs/reference/: api.md
docs/usage/: custom_codes.md  fallback.md  quick_start.md  register_exception_handlers.md  response_model.md
enums/: response_scheme.py
examples/: example_usage.py  fastapi_rfc7807_usage.py  fastapi_usage.py  production_level.py
installation/: index.html
reference/api/: index.html
schemas/: response_model.py  rfc7807_model.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/advanced/swagger/: index.html
site/changelog/: index.html
site/installation/: index.html
site/reference/api/: index.html
site/search/: search_index.json
site/usage/fallback/: index.html
site/usage/quick_start/: index.html
site/usage/response_model/: index.html
test/: __init__.py
tests/: test_exception.py
usage/custom_codes/: index.html
usage/fallback/: index.html
usage/quick_start/: index.html
usage/response_model/: index.html
