[project]
name = "apiexception"
version = "0.1.16"
description = "Consistent JSON response formatting and error handling for FastAPI applications"
authors = [{ name = "Ahmet Kutay URAL", email = "ahmetkutayural@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "fastapi",
    "exception",
    "error-handling",
    "json-response",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi==0.115.4",
    "httpx==0.27.0",
    "pydantic>=2.0.0",
    "uvicorn==0.32.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.16",
    "ruff==0.12.5",
    "setuptools>=80.9.0",
]

[project.urls]
Documentation = "https://akutayural.github.io/APIException/"
Source = "https://github.com/akutayural/APIException"
PyPI = "https://pypi.org/project/APIException/"

[project.scripts]
APIException-info = "api_exception.__main__:main"

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["."]
include = ["api_exception*", "custom_enum*", "schemas*", "examples*"]
