[tool.poetry]
name = "apiexception"
version = "0.1.18"
description = "Consistent JSON response formatting and exception & error handling for FastAPI applications"
authors = ["Ahmet Kutay URAL <ahmetkutayural@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["fastapi", "exception", "error-handling", "json-response"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]

# Çoklu paket desteği (schemas, custom_enum vs. dahil)
packages = [
  { include = "api_exception" },
  { include = "custom_enum" },
  { include = "schemas" }
  # { include = "examples", optional = true } # paketlemek istemiyorsan yorumda bırak
]

[tool.poetry.urls]
"Documentation" = "https://akutayural.github.io/APIException/"
"Source" = "https://github.com/akutayural/APIException"
"Bug Tracker" = "https://github.com/akutayural/APIException/issues"
"Changelog" = "https://github.com/akutayural/APIException/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.115.4"
httpx = ">=0.27.0"
pydantic = ">=2.0.0"
click = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
mkdocs-awesome-pages-plugin = ">=2.10.1"
mkdocs-macros-plugin = ">=1.3.7"
mkdocs-material = ">=9.6.16"
ruff = "==0.12.5"
setuptools = ">=80.9.0"
uvicorn = ">=0.32.0"

[tool.poetry.scripts]
APIException-info = "api_exception.__main__:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"